--- a/src/components/sign-up/sign-up.styles.scss
+++ b/src/components/sign-up/sign-up.styles.scss
@@ -1,14 +1,9 @@
-.sign-in {
+.sign-up {
     width: 380px;
     display: flex;
     flex-direction: column;
 
     .title {
         margin: 10px 0;
-    }
-
-    .buttons {
-        display: flex;
-        justify-content: space-between;
     }
 }
